--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
+    "bootstrap": "^4.1.3",
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-wallpaper": "^0.1.1",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -49,7 +51,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-wallpaper": {}
     }
   }
 }
